--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,17 +2,29 @@ ul{
     list-style-type: none;
 }
 a{
-    color:black;
+    color:rgb(219, 59, 59);
     text-decoration: none;
 }
 header h1 {
-    display: inline;
+    display: inline-block;
+    padding-left: 50px;
 
 }
-header ul li{
-    display: inline;
-    padding: 0 50px; 
+header nav{
     font-size: x-large;
+    float: right; 
+}
 
-  
+header nav ul li{
+    display: inline-block;
+    padding-right: 50px;
+}
+
+header{
+    background-color: rgb(56, 56, 56);
+    color: white;
+}
+
+body{
+    margin:0;
 }
