--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/*Header*/
+
 ul{
     list-style-type: none;
 }
@@ -25,6 +27,20 @@ header{
     color: white;
 }
 
+/*Body*/
+
 body{
     margin:0;
+}
+
+/*About Me*/
+
+#photo{
+    display: inline-block;
+}
+#about h2{
+    display: inline-block;
+}
+#about p{
+    display: inline;
 }
