--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,12 +35,10 @@ body{
 
 /*About Me*/
 
+#textabout{
+    display:inline;
+}
+
 #photo{
-    display: inline-block;
-}
-#about h2{
-    display: inline-block;
-}
-#about p{
-    display: inline;
+    float: left;
 }
