--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,10 +35,10 @@ body{
 
 /*About Me*/
 
-#textabout{
-    display:inline;
+#about{
+    display:flex;
 }
 
-#photo{
-    float: left;
+p{
+    font-size:x-large;
 }
